<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/frag_bg_2"
    tools:context=".ui.reg.RegActivity">

    <TextView
        android:id="@+id/textView5"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="100dp"
        android:layout_marginBottom="8dp"
        android:autoSizeTextType="uniform"
        android:text="@string/registro_de_usuario"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/textView12"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="TextContrastCheck" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="120dp"
        android:layout_marginBottom="20dp"
        android:text="@string/mensaje_registro"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/cardView4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="TextContrastCheck" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/btn_regQR"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="50dp"
        android:layout_marginBottom="-25dp"
        android:clickable="true"
        android:contentDescription="@string/escaneaqr"
        android:src="@drawable/baseline_qr_code_scanner_24"
        app:backgroundTint="@color/white"
        app:elevation="8dp"
        app:fabSize="auto"
        app:layout_constraintBottom_toTopOf="@+id/guideline3"
        app:layout_constraintEnd_toEndOf="parent"
        android:focusable="true" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.25" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView4"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="-40dp"
        app:cardCornerRadius="48dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline3"
        tools:ignore="VisualLintBounds">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white"
            android:contentDescription="@string/reg_form">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/sec_app"
                android:orientation="vertical"
                android:padding="32dp">

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="20dp"
                    android:alpha="0.8"
                    app:errorEnabled="true"
                    app:startIconDrawable="@drawable/baseline_person_24">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/et_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/nombre"
                        android:inputType="textPersonName"
                        tools:ignore="VisualLintTextFieldSize,TextContrastCheck" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="18dp"
                    android:alpha="0.8"
                    app:errorEnabled="true">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/et_pLastName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/apellido_paterno"
                        android:inputType="textPersonName"
                        tools:ignore="TextContrastCheck,VisualLintTextFieldSize" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="18dp"
                    android:alpha="0.8"
                    app:errorEnabled="true">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/et_mLastName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/apellido_materno"
                        android:inputType="textPersonName"
                        tools:ignore="TextContrastCheck,VisualLintTextFieldSize" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="18dp"
                    android:alpha="0.8"
                    app:counterEnabled="true"
                    app:counterMaxLength="18"
                    app:errorEnabled="true"
                    app:startIconDrawable="@drawable/baseline_fingerprint_24">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/et_curp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/curp"
                        android:inputType="text"
                        tools:ignore="TextContrastCheck,VisualLintTextFieldSize" />
                </com.google.android.material.textfield.TextInputLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="18dp"
                    android:orientation="horizontal">

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:alpha="0.8"
                        app:errorEnabled="true"
                        app:startIconDrawable="@drawable/baseline_date_range_24">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/et_bDate"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/f_de_nacimiento"
                            android:inputType="date"
                            tools:ignore="TextContrastCheck,VisualLintTextFieldSize" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <Spinner
                        android:id="@+id/sp_gender"
                        android:layout_width="0dp"
                        android:layout_height="60dp"
                        android:layout_marginStart="16dp"
                        android:layout_weight="1"
                        android:alpha="0.8"
                        android:entries="@array/spinner_gender" />
                </LinearLayout>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rv_vulSituations"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="32dp" />

                <Button
                    android:id="@+id/btn_uploadCostumer"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="48dp"
                    android:layout_marginTop="32dp"
                    android:layout_marginRight="48dp"
                    android:backgroundTint="@color/blue_dif"
                    android:text="@string/registrar"
                    tools:ignore="TextContrastCheck,VisualLintButtonSize" />

                <TextView
                    android:id="@+id/tv_helpReg"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:layout_marginBottom="32dp"
                    android:alpha="0.7"
                    android:text="@string/no_conoces_tus_datos"
                    android:textAlignment="center"
                    android:textColor="#0277BD"
                    tools:ignore="TextContrastCheck" />

            </LinearLayout>
        </ScrollView>
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>