<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/frag_bg_4"
    tools:context=".ui.assist.AssistActivity">

    <TextView
        android:id="@+id/tvLst"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="100dp"
        android:layout_marginBottom="8dp"
        android:autoSizeMinTextSize="32sp"
        android:autoSizeTextType="uniform"
        android:text="@string/asistencia"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/textView12"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="TextContrastCheck" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="120dp"
        android:layout_marginBottom="20dp"
        android:text="@string/usa_el_curp_o_token_del_comensal"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/guideline3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="TextContrastCheck" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/btn_assistQR"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="50dp"
        android:layout_marginBottom="-25dp"
        android:clickable="true"
        android:contentDescription="@string/escaneaqr"
        android:src="@drawable/baseline_qr_code_scanner_24"
        app:backgroundTint="@color/white"
        app:elevation="8dp"
        app:layout_constraintBottom_toTopOf="@+id/guideline3"
        app:layout_constraintEnd_toEndOf="parent"
        android:focusable="true" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.25" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView4"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="-40dp"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="48dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline3"
        tools:ignore="VisualLintBounds">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/sec_app"
                android:orientation="vertical"
                android:padding="32dp">

                <ImageView
                    android:id="@+id/imageCoso"
                    android:layout_width="305dp"
                    android:layout_height="201dp"
                    android:layout_gravity="center"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="8dp"
                    android:adjustViewBounds="true"
                    android:cropToPadding="false"
                    android:scaleType="centerInside"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/prueba1"
                    android:contentDescription="@string/foto" />

                <View
                    android:id="@+id/divider4"
                    android:layout_width="match_parent"
                    android:layout_height="5dp"
                    android:layout_marginTop="4dp"
                    android:background="?android:attr/listDivider"
                    android:backgroundTint="@color/main_color"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/imageView5" />

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:alpha="0.8"
                    app:counterEnabled="true"
                    app:counterMaxLength="18"
                    app:errorEnabled="true"
                    app:startIconDrawable="@drawable/baseline_fingerprint_24">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/et_accessType"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/curp_token"
                        android:inputType="text"
                        tools:ignore="TextContrastCheck,VisualLintTextFieldSize" />
                </com.google.android.material.textfield.TextInputLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="80dp"
                    android:layout_marginTop="20dp"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:alpha="0.8"
                        app:errorEnabled="true"
                        app:startIconDrawable="@drawable/baseline_food_bank_24">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/et_servings"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/raciones"
                            android:inputType="numberDecimal"
                            tools:ignore="TextContrastCheck,VisualLintTextFieldSize" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <Spinner
                        android:id="@+id/sp_type"
                        android:layout_width="0dp"
                        android:layout_height="60dp"
                        android:layout_marginStart="16dp"
                        android:layout_weight="1"
                        android:alpha="0.8"
                        android:entries="@array/spinner_servings" />
                </LinearLayout>

                <Button
                    android:id="@+id/btn_uploadAtten"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="48dp"
                    android:layout_marginTop="48dp"
                    android:layout_marginRight="48dp"
                    android:backgroundTint="@color/purple_dif"
                    android:text="@string/tomar_asistencia"
                    tools:ignore="TextContrastCheck,VisualLintButtonSize" />

                <TextView
                    android:id="@+id/tv_assistHelp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:layout_marginBottom="32dp"
                    android:text="@string/no_conoces_tus_datos"
                    android:textAlignment="center"
                    android:textColor="@color/purple_dif" />

            </LinearLayout>
        </ScrollView>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>